--- a/TM.css
+++ b/TM.css
@@ -1,150 +1,150 @@
 [data-cid^="20168147-"] .badge-box .bdg {
-    border-radius: 5px ;
+    border-radius: 5px;
     background-image: url("http://i.imgur.com/GqRyjQb.png") ;
-    background-repeat: round ;
-    background-size: 30px ;
+    background-repeat: round;
+    background-size: 30px;
 }
 
 #user-rollover.id-20168147 .badge-box .bdg {
-    border-radius: 5px ;
-    background-image: url("http://i.imgur.com/GqRyjQb.png") ;
-    background-repeat: round ;
-    background-size: 30px ;
+    border-radius: 5px;
+    background-image: url("http://i.imgur.com/GqRyjQb.png");
+    background-repeat: round;
+    background-size: 30px;
 }
 
 [data-cid^="20168147-"] .msg .from .un {
-    color: #25b961 ;
+    color: #25b961;
 }
 
 [data-cid^="20168147-"] #chat .emote {
-    background: rgba(37,185,97,0.3) ;
-    border-left: rgb(37,185,97) 3px solid ;
+    background: rgba(37,185,97,0.3);
+    border-left: rgb(37,185,97) 3px solid;
 
 }
 #user-rollover.role-manager .meta:before {
-    position: absolute ;
-    content: T+M Supporter and Staff ;
-    color: white ;
-    top: 117px ;
-    left: 108px ;
-    cursor: text ;
-    font-weight: 400px ;
-    font-size: 12px ;
+    position: absolute;
+    content: T+M Supporter and Staff;
+    color: white;
+    top: 117px;
+    left: 108px;
+    cursor: text;
+    font-weight: 400px;
+    font-size: 12px;
  }
  #user-rollover.id-3669054 .meta:after, #user-rollover.id-5712221 .meta:after, #user-rollover.id-5096489 .meta:after, #user-rollover.id-3544413 .meta:after, #user-rollover.id-4409204 .meta:after {
-    color: white ;
-    content: T+M Supporter and Staff ;
-    left: 130px ;
-    position: absolute ;
-    top: 118px ;
+    color: white;
+    content: T+M Supporter and Staff;
+    left: 130px;
+    position: absolute;
+    top: 118px;
  }
  #user-rollover.id-3669054 .meta, #user-rollover.id-5712221 .meta, #user-rollover.id-5096489 .meta {
-    height: 146px ;
+    height: 146px;
  }
  #chat [data-cid^='3669054-'] .un, #chat [data-cid^='5712221-'] .un, #chat [data-cid^='5096489-'] .un, #chat [data-cid^='3544413-'] .un, #chat [data-cid^='4409204-'] .un {
-    position: relative ;
-    top: -3px ;
+    position: relative;
+    top: -3px;
  }
  #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='5712221-'] .un:before, #chat [data-cid^='5096489-'] .un:before, #chat [data-cid^='3544413-'] .un:before, #chat [data-cid^='4409204-'] .un:before {
-    content: http://i.imgur.com/UZBtOvE.png?1 ;
-    left: -3px ;
-    position: relative ;
-    top: 3px ;
+    content: http://i.imgur.com/UZBtOvE.png?1;
+    left: -3px;
+    position: relative;
+    top: 3px;
  }
  #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='5712221-'] .un:hover:after, #chat [data-cid^='5096489-'] .un:hover:after, #chat [data-cid^='3544413-'] .un:hover:after, #chat [data-cid^='4409204-'] .un:hover:after {
-    background: url("https://rawgit.com/Satskhi/EDTRCS/master/images/tooltip.png") ;
-    bottom: 20px ;
-    color: white ;
-    content: T+M Supporter and Staff ;
-    height: 26px ;
-    left: 5px ;
-    padding: 3px 6px ;
-    position: absolute ;
-    width: 79px ;
+    background: url("https://rawgit.com/Satskhi/EDTRCS/master/images/tooltip.png");
+    bottom: 20px;
+    color: white;
+    content: T+M Supporter and Staff;
+    height: 26px;
+    left: 5px;
+    padding: 3px 6px;
+    position: absolute;
+    width: 79px;
  }
  #user-rollover.id-3669054 .meta:before, #user-rollover.id-5712221 .meta:before, #user-rollover.id-5096489 .meta:before, #user-rollover.id-3544413 .meta:before, #user-rollover.id-4409204 .meta:before {
-    content: T+M Supporter and Staff ;
-    left: 109px ;
-    position: absolute ;
-    top: 120px ;
+    content: T+M Supporter and Staff;
+    left: 109px;
+    position: absolute;
+    top: 120px;
  }
  #user-rollover.id-3669054 .meta #isSpecialtxt, #user-rollover.id-5712221 .meta #isSpecialtxt {
-    top: 143px ;
+    top: 143px;
  }
  #user-rollover.id-3669054 .meta #isSpecial, #user-rollover.id-5712221 .meta #isSpecial {
-    top: 145px ;
+    top: 145px;
  }
  #user-lists .group {
-    background: linear-gradient(hsl(220,10%,10%), hsl(220,10%,5%)) !important ;
+    background: linear-gradient(hsl(220,10%,10%), hsl(220,10%,5%)) !important;
  }
  #user-lists .list.staff .group {
-    border-top: 1px solid rgba(40, 120, 60, 1) ;
-    border-bottom: 1px solid rgba(40, 120, 60, 1) ;
-    background: rgba(40, 120, 60, 0.2) ;
+    border-top: 1px solid rgba(40, 120, 60, 1);
+    border-bottom: 1px solid rgba(40, 120, 60, 1);
+    background: rgba(40, 120, 60, 0.2);
  }
  #user-lists .user:hover {
-    background: linear-gradient(to right, hsla(200,100%,20%,.5), hsla(200,100%,40%,.5)) !important ;
+    background: linear-gradient(to right, hsla(200,100%,20%,.5), hsla(200,100%,40%,.5)) !important;
  }
  #user-lists .list-header {
-    top: 44px ;
+    top: 44px;
  }
  #user-lists .list.staff .user:hover .name {
-    color: #EEE !important ;
+    color: #EEE !important;
  }
  #user-lists .header {
-    height: 42px ;
+    height: 42px;
  }
  #user-lists .header .button.selected {
-    border-radius: 0px ;
-    background: radial-gradient(hsla(210,10%,50%,.5), hsla(210,10%,40%,.3)) ;
-    border: none !important ;
+    border-radius: 0px;
+    background: radial-gradient(hsla(210,10%,50%,.5), hsla(210,10%,40%,.3));
+    border: none !important;
  }
  #user-lists .header .button {
-    top: 0px ;
+    top: 0px;
  }
  #user-lists .group.host {
-    color: #5BF ;
-    background: linear-gradient(to right, hsla(210,100%,30%,.5), hsla(210,100%,40%,.5)) !important ;
-    top: 1px ;
+    color: #5BF;
+    background: linear-gradient(to right, hsla(210,100%,30%,.5), hsla(210,100%,40%,.5)) !important;
+    top: 1px;
  }
  #user-lists .group.host ~ .user:nth-child(2) span {
-    color: #5Bf ;
+    color: #5Bf;
  }
  #user-lists .group.host ~ .user span {
-    color: #58F ;
+    color: #58F;
  }
  #user-lists .group.manager {
-    color: #E15 ;
-    background: linear-gradient(to right, hsla(0,100%,20%,.5), hsla(0,100%,30%,.5)) !important ;
-   },
-   "#user-lists .group.manager ~ .user span {
-      "color":"#E15"
-   },
-   "#user-lists .group.bouncer {
-      "color":"#F45",
-      "background":"linear-gradient(to right, hsla(10,100%,30%,.5), hsla(10,100%,40%,.5)) !important"
-   },
-   "#user-lists .group.bouncer ~ .user span {
-      "color":"#F45"
-   },
-   "#user-lists .group.dj {
-      "color":"#F95",
-      "background":"linear-gradient(to right, hsla(20,100%,30%,.5), hsla(30,100%,40%,.5)) !important"
-   },
-   "#user-lists .group.dj ~ .user span {
-      "color":"#F95"
-   },
-   ".icon-chat-host + span, #user-lists .group.host ~ .user span, #dialog-user-role .role-menu .menu ul .host span {
-      "color":"#5BF"
-   },
-   ".icon-chat-cohost + span, #user-lists .group.cohost ~ .user span, #dialog-user-role .role-menu .menu ul .cohost span {
-      "color":"#58f"
-   },
-   ".icon-chat-manager + span, #user-lists .group.manager ~ .user span, #dialog-user-role .role-menu .menu ul .manager span {
-      "color":"#E15"
-   },
-   ".icon-chat-bouncer + span, #user-lists .group.bouncer ~ .user span, #dialog-user-role .role-menu .menu ul .bouncer span {
-      "color":"#F45"
-   },
-   ".icon-chat-dj + span, #user-lists .group.dj ~ .user span, #dialog-user-role .role-menu .menu ul .dj span {
-      "color":"#F95"    
+    color: #E15;
+    background: linear-gradient(to right, hsla(0,100%,20%,.5), hsla(0,100%,30%,.5)) !important;
+ }
+ #user-lists .group.manager ~ .user span {
+    color: #E15;
+ }
+ #user-lists .group.bouncer {
+    color: #F45;
+    background: linear-gradient(to right, hsla(10,100%,30%,.5), hsla(10,100%,40%,.5)) !important;
+ }
+ #user-lists .group.bouncer ~ .user span {
+    color: #F45;
+ }
+ #user-lists .group.dj {
+    color: #F95;
+    background: linear-gradient(to right, hsla(20,100%,30%,.5), hsla(30,100%,40%,.5)) !important;
+ }
+ #user-lists .group.dj ~ .user span {
+    color: #F95;
+ }
+ .icon-chat-host + span, #user-lists .group.host ~ .user span, #dialog-user-role .role-menu .menu ul .host span {
+    color: #5BF;
+ }
+ .icon-chat-cohost + span, #user-lists .group.cohost ~ .user span, #dialog-user-role .role-menu .menu ul .cohost span {
+    color: #58f;
+ }
+ .icon-chat-manager + span, #user-lists .group.manager ~ .user span, #dialog-user-role .role-menu .menu ul .manager span {
+    color: #E15;
+ }
+ .icon-chat-bouncer + span, #user-lists .group.bouncer ~ .user span, #dialog-user-role .role-menu .menu ul .bouncer span {
+    color: #F45;
+ }
+ .icon-chat-dj + span, #user-lists .group.dj ~ .user span, #dialog-user-role .role-menu .menu ul .dj span {
+    color: F95;  
