TM CSS Version(1.0.4)

--- a/TM.css
+++ b/TM.css
@@ -148,3 +148,9 @@
  }
  .icon-chat-dj + span, #user-lists .group.dj ~ .user span, #dialog-user-role .role-menu .menu ul .dj span {
     color: F95;  
+ }
+ div#user-rollover.is-none.can-mention.can-friend.can-ignore.can-shop.expand.chat.id-3669054.is-T+M-supporter.role-subscriber.role-none div.meta.subscriber i#isSpecial {
+ }    
+ div#user-rollover.is-none.can-mention.can-friend.can-ignore.can-shop.expand.chat.id-3669054.is-T+M-supporter.role-subscriber.role-none div.meta.subscriber span#isSpecialtxt {
+     
+   
