--- a/TM.css
+++ b/TM.css
@@ -147,7 +147,7 @@
     color: #F45;
  }
  .icon-chat-dj + span, #user-lists .group.dj ~ .user span, #dialog-user-role .role-menu .menu ul .dj span {
-    color: F95;  
+    color: #F95;  
  }
  div#user-rollover.is-none.can-mention.can-friend.can-ignore.can-shop.expand.chat.id-3669054.is-T+M-supporter.role-subscriber.role-none div.meta.subscriber i#isSpecial {
  }    
