--- a/TM.css
+++ b/TM.css
@@ -13,13 +13,13 @@
 [data-cid^="20168147-"] .msg .from .un {
     color: #25b961;
 }
-#user-rollover.id-20168147 [data-cid^="20168147-"] #chat .emote {
+[data-cid^="20168147-"] #chat .emote {
     background: rgba(37,185,97,0.3);
     border-left: rgb(37,185,97) 3px solid;
 }
 #user-rollover.role-manager .meta:before {
     position: absolute;
-    content: T+M Supporter and Staff;
+    content: TitanMusic Supporter and Staff;
     color: white;
     top: 117px;
     left: 108px;
@@ -29,7 +29,7 @@
  }
  #user-rollover.id-3669054 .meta:after, #user-rollover.id-5712221 .meta:after, #user-rollover.id-5096489 .meta:after, #user-rollover.id-3544413 .meta:after, #user-rollover.id-4409204 .meta:after {
     color: white;
-    content: T+M Supporter and Staff;
+    content: TitanMusic Supporter and Staff;
     left: 130px;
     position: absolute;
     top: 118px;
@@ -51,7 +51,7 @@
     background: url("https://rawgit.com/Satskhi/EDTRCS/master/images/tooltip.png");
     bottom: 20px;
     color: white;
-    content: T+M Supporter and Staff;
+    content: TitanMusic Supporter and Staff;
     height: 26px;
     left: 5px;
     padding: 3px 6px;
@@ -59,7 +59,7 @@
     width: 79px;
  }
  #user-rollover.id-3669054 .meta:before, #user-rollover.id-5712221 .meta:before, #user-rollover.id-5096489 .meta:before, #user-rollover.id-3544413 .meta:before, #user-rollover.id-4409204 .meta:before {
-    content: T+M Supporter and Staff;
+    content: TitanMusic Supporter and Staff;
     left: 109px;
     position: absolute;
     top: 120px;
@@ -146,7 +146,72 @@
     color: #F95;  
  }
  #user-rollover.is-none.can-mention.can-friend.can-ignore.can-shop.expand.chat.id-3669054.is-T+M-supporter.role-subscriber.role-none div.meta.subscriber i#isSpecial {
- }    
+    content: TitanMusic Staff;
+    left: 109px;
+    position: absolute;
+    top: 120px;
+ }  
  #user-rollover.is-none.can-mention.can-friend.can-ignore.can-shop.expand.chat.id-3669054.is-T+M-supporter.role-subscriber.role-none div.meta.subscriber span#isSpecialtxt {
-     
-   
+    content: TitanMusic Staff;
+    left: 109px;
+    position: absolute;
+    top: 120px;
+ }
+ #the-user-profile .notifications.section .row {
+	border-radius: 10px;
+	background: linear-gradient(hsl(210,100%,20%), hsl(210,100%,10%));
+ }
+ #the-user-profile .notifications .row .timestamp {
+	color: hsl(210,10%,50%);
+ }
+#the-user-profile .meta {
+	background: hsla(200,100%,90%,.05) !important;
+	box-shadow: 0 0 0px 15px hsla(200,100%,90%,.05);
+}
+#the-user-profile .experience.section .header {
+	box-shadow: none !important;
+}
+.user-content.profile .meta .blurb .box,
+.user-content.profile .meta .blurb input {
+	max-height: initial;
+	padding: 0 5px;
+}
+#the-user-profile .blurb .box {
+	background: linear-gradient(135deg, hsl(210,100%,25%), hsl(200,100%,25%));
+	box-shadow: inset 0 0 5px 1px hsla(0,0%,100%,.4);
+}
+#the-user-profile .blurb .arrow-up {
+	border-bottom: 6px solid hsl(210,100%,25%);
+}
+#the-user-profile .experience .bar, #footer-user .info .meta .bar {
+	border-radius: 20px;
+	background: radial-gradient(hsl(210,10%,15%), hsl(210,10%,20%)) !important;
+}
+#the-user-profile .experience .bar .progress, #footer-user .info .meta .bar .progress {
+	border-radius: 20px;
+	background: radial-gradient(at top left, hsla(0,0%,50%,0), hsla(0,0%,100%,.2)), linear-gradient(hsl(205,100%,60%), hsl(205,100%,50%));
+	box-shadow: 0 0 30px hsl(205,100%,50%);
+}
+#the-user-profile .experience .bar .value, #footer-user .info .meta .bar .value {
+	text-shadow: 0 0 3px black;
+}
+.experience .levels .level {
+	background: linear-gradient(hsl(210,10%,30%), hsl(210,10%,10%));
+}
+.experience .levels .level .icon-sunburst {
+	background: url(https://raw.githubusercontent.com/Plug-It/pi/pre-release/img/other/badgebghover.png) 50% 50% / 150% !important;
+}
+.experience .levels .level .label i {
+	z-index: 0;
+}    
+.notification {
+	border-radius: 20px;
+	background: rgba(50,100,255,.7);
+}
+#toast-notifications .left {
+	border-radius: 20px 0 0 20px;
+	background: linear-gradient(135deg, rgba(255,255,255,.4), rgba(0,0,0,0)) !important;
+}
+#toast-notifications .right {
+	border-radius: 0 20px 20px 0;
+	background: linear-gradient(rgba(255,255,255,.2), rgba(0,0,0,0)) !important;
