--- a/TM.css
+++ b/TM.css
@@ -304,4 +304,14 @@ div#user-rollover.is-host.can-mention.can-friend.expand.chat.id-3669054.is-devel
 #app-menu .list .logout:hover {
 	background: linear-gradient(to right, hsl(10,90%,20%), hsl(0,90%,20%));
 	box-shadow: 0 0 5px #000;
-	border: 1px solid #F55;	
+	border: 1px solid #F55;
+}
+#vote .crowd-response { 
+	position: relative; 
+	float: left; 
+	margin-right: 1px; 
+	width: 84px; 
+	height: 61px; 
+	background: rgba(0, 0, 0, 0.61); 
+	text-align: center; 
+	cursor: pointer;
