--- a/TM.css
+++ b/TM.css
@@ -324,3 +324,12 @@ div#user-rollover.is-host.can-mention.can-friend.expand.chat.id-3669054.is-devel
 	width: 100%; 
 	background: rgba(40, 44, 53, 0.73); 
 	box-shadow: inset 0 2px 0 -1px #0A0A0A;
+}
+#playlist-button { 
+	top: 0; 
+	z-index: 100; 
+	width: 53px; 
+	-webkit-box-shadow: inset 0 2px 0 -1px #0A0A0A; 
+	background: #002a65; 
+	background: -moz-linear-gradient(top,#ac76ff 0,#925aff 100%); 
+	
