--- a/Staff.css
+++ b/Staff.css
@@ -9,7 +9,7 @@ TitanMusic | Developer: 3669054
 }
 
 #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before {
-    content: url("https://dl.dropboxusercontent.com/s/snctnlwc2lz5b0p/EDT-supporter.png");
+    content: url("http://i.imgur.com/3WAxI63.png?1");
     top: 3px;
     left: -3px;
     position: relative;
@@ -39,7 +39,7 @@ TitanMusic | Developer: 3669054
 }
 
 #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before {
-    content: url("https://dl.dropboxusercontent.com/s/snctnlwc2lz5b0p/EDT-supporter.png");
+    content: url("http://i.imgur.com/3WAxI63.png?1");
     top: 120px;
     left: 109px;
     position: absolute;
