--- a/TM.css
+++ b/TM.css
@@ -1,3 +1,6 @@
+@import url("https://rawgit.com/TitanMusicDev/TMCss/master/Supporters.css");
+
+}
 [data-cid^="20168147-"] .badge-box .bdg {
     border-radius: 5px;
     background-image: url("http://i.imgur.com/eKqnlGD.jpg?1");
