--- a/TM.css
+++ b/TM.css
@@ -271,3 +271,64 @@
 	background: #002a65; 
 	background: -moz-linear-gradient(top,#ac76ff 0,#925aff 100%); 
 	
+@-moz-document domain("plug.dj") {
+/* Trigstur/Co host thingies */
+ 
+.id-5712221 > .badge-box > i.bdg
+{
+    background-image:    url("http://25.media.tumblr.com/bf311a757586df96ba089aaad0484674/tumblr_mhfc9nHvos1r7c13zo1_500.gif");
+    background-size:     cover;
+    background-repeat:   no-repeat;
+    background-position: center center;
+}
+ 
+#user-rollover.id-5712221 .badge-box > i.bdg
+{
+    border-radius:       6px;
+    background-image:    url("http://25.media.tumblr.com/bf311a757586df96ba089aaad0484674/tumblr_mhfc9nHvos1r7c13zo1_500.gif");
+    background-size:     cover;
+    background-repeat:   no-repeat;
+    background-position: center center;
+}
+.id-5712221 > .msg > .from > i.icon-chat-host
+{
+    background: url("https://i.imgur.com/yYXddU8.gif") no-repeat !important;
+}
+.id-5712221 > .msg > .from > i.icon-chat-host
+{
+    background: url("https://i.imgur.com/yYXddU8.gif") no-repeat !important;
+}
+#user-rollover .info {
+    position: relative;
+    width: 100%;
+    height: 45px;
+    background: rgb(29, 67, 80);
+    font-weight: 400;
+}er-rollover.id-5712221 .username:hover,
+#chat [data-cid^="5712221-"] span.un.clickable:hover {
+animation:rainbow 10s infinite;
+}
+@keyframes rainbow {
+0% {color: #ff0000;}
+10% {color: #ff8000;}
+20% {color: #ffff00;}
+30% {color: #80ff00;}
+40% {color: #00ff00;}
+50% {color: #00ff80;}
+60% {color: #00ffff;}
+70% {color: #0080ff;}
+80% {color: #0000ff;}
+90% {color: #8000ff;}
+100% {color: #ff0080;}
+}
+#user-rollover.role-cohost .role i {
+    background: url(https://i.imgur.com/yYXddU8.gif) !important;
+}
+#user-lists .list.room .user
+.icon-chat-cohost {
+    background: url(https://i.imgur.com/yYXddU8.gif) !important;
+}
+ 
+/* Trigstur/Co host thingies */
+}	
+	
