--- a/TM.css
+++ b/TM.css
@@ -1,24 +1,6 @@
+@import url("https://rawgit.com/TitanMusicDev/TMCss/master/Bot.css");
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Supporters.css");
 
-}
-[data-cid^="20168147-"] .badge-box .bdg {
-    border-radius: 5px;
-    background-image: url("http://i.imgur.com/eKqnlGD.jpg?1");
-    background-repeat: round;
-    background-size: 30px;
-}
-#user-rollover.id-20168147 .badge-box .bdg {
-    border-radius: 5px;
-    background-image: url("http://i.imgur.com/eKqnlGD.jpg?1");
-    background-repeat: round;
-    background-size: 30px;
-}
-[data-cid^="20168147-"] .msg .from .un {
-    color: #25b961;
-}
-[data-cid^="20168147-"] #chat .emote {
-    background: rgba(37,185,97,0.5);
-    border-left: rgb(37,185,97) 3px solid;
  }
  #user-lists .group {
     background: linear-gradient(hsl(220,10%,10%), hsl(220,10%,5%)) !important;
