--- a/WAM.css
+++ b/WAM.css
@@ -1,1 +1,78 @@
-
+#vote .crowd-response { 
+  position: relative; 
+	float: left; 
+	margin-right: 1px; 
+	width: 84px; 
+	height: 61px; 
+	background: rgba(0, 0, 0, 0.60); 
+	text-align: center; 
+  cursor: pointer;
+}
+#app #vote .bottom {
+	background: rgba(0,0,0,0);
+}
+#woot, #grab, #meh {
+	margin-top: 0 !important;
+}
+#vote .selected,
+#vote .selected .value {
+	font-weight: bold;
+	color: #FFF;
+}
+.pop-menu, .pop-menu .bar {
+	border-radius: 20px 20px 0 0;
+	background: transparent;
+}
+.pop-menu .bar {
+	background: linear-gradient(hsla(260,50%,50%,.8), hsla(260,50%,30%,.8));
+}
+.pop-menu .bar-divider {
+	background: linear-gradient(hsla(0,0%,90%,.8), hsla(0,0%,60%,.8));
+}
+.pop-menu .menu ul {
+	background: hsla(260,10%,7%,.8);
+}
+.pop-menu .menu ul i + span {
+	font-weight: bold;
+}
+.pop-menu .menu ul li:hover {
+	background: linear-gradient(hsla(260,50%,50%,.2), hsla(260,50%,30%,.2));;
+}
+.pop-menu .menu ul .create:hover {
+	background: linear-gradient(hsl(260,40%,50%), hsl(260,40%,30%));
+}
+.pop-menu .menu::-webkit-scrollbar {
+	background: hsl(260,10%,20%) !important;
+	box-shadow: inset 0 0 10px #000;
+	width: 10px;
+}
+.pop-menu .menu::-webkit-scrollbar-thumb {
+	background: linear-gradient(to right, hsl(260,40%,60%), hsl(260,40%,40%));
+	box-shadow: inset 0 0 5px hsla(0,0%,100%,.3);
+}
+#woot {
+	border-radius: 30px 0 0 30px;
+	background: linear-gradient(135deg, hsla(0,0%,50%,.3), hsla(0,0%,30%,.3)) !important;
+	box-shadow: inset 0 0 10px hsl(0,0%,40%) !important;
+}
+#woot.selected, #woot-rs .title {
+	background: linear-gradient(135deg, hsla(90,80%,50%,.8), hsla(90,80%,30%,.8)) !important;
+	box-shadow: inset 0 0 10px hsl(70,100%,40%) !important;
+}
+#grab {
+	background: linear-gradient(hsla(0,0%,50%,.3), hsla(0,0%,30%,.3)) !important;
+	box-shadow: inset 0 0 10px hsl(0,0%,40%) !important;
+}
+#grab.selected, #grab-rs .title {
+	background: linear-gradient(hsla(270,70%,50%,.8), hsla(265,70%,30%,.8)) !important;
+	box-shadow: inset 0 0 10px hsl(280,100%,40%) !important;
+}
+#meh {
+	background: linear-gradient(225deg, hsla(0,0%,50%,.3), hsla(0,0%,30%,.3)) !important;
+	box-shadow: inset 0 0 10px hsl(0,0%,40%) !important;
+	border-radius: 0 30px 30px 0;
+	margin-right: 0 !important;
+}
+#meh.selected, #meh-rs .title {
+	background: linear-gradient(225deg, hsla(5,80%,50%,.8), hsla(0,80%,40%,.8)) !important;
+	box-shadow: inset 0 0 10px hsl(15,100%,50%) !important;
