TM CSS Version(1.1.5)

--- a/TM.css
+++ b/TM.css
@@ -1,3 +1,4 @@
+@import url("https://rawgit.com/TitanMusicDev/TMCss/master/WAM.css");
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Bot.css");
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Supporters.css");
 
