--- a/Users.css
+++ b/Users.css
@@ -1,1 +1,15 @@
-
+ }
+ /* TitanMusic | Developer */
+/* TitanMusic | Developer */
+ [data-cid^="3669054-"] .badge-box .bdg {
+     border-radius: 6px !important;
+     background-image: url("http://i.imgur.com/WSnlRjs.gif") !important;
+     background-repeat: round !important;
+     background-size: 30px !important;
+ }
+ #user-rollover.id-3669054 .badge-box .bdg {
+     border-radius: 8px !important;
+     background-image: url("http://i.imgur.com/WSnlRjs.gif") !important;
+     background-repeat: round !important;
+     background-size: 30px !important;
+ }
