--- a/TM.css
+++ b/TM.css
@@ -1,6 +1,7 @@
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/WAM.css");
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Bot.css");
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Supporters.css");
+@import url("https://rawgit.com/TitanMusicDev/TMCss/master/Developer.css");
 
 element.style {
     height: 150px;
