--- a/TM.css
+++ b/TM.css
@@ -8,10 +8,10 @@ element.style {
     /* height: 126px; */
 }
 
-#user-rollover.id-5712221 .meta, #user-rollover.id-5712221 .meta, #user-rollover.id-5712221 .meta {
+#user-rollover.id-5712221 .meta, #user-rollover.id-5712221 .meta, #user-rollover.id-5712221 .meta)) !important;
     height: 150px;
 }
-#user-rollover.id-3669054 .meta, #user-rollover.id-5712221 .meta, #user-rollover.id-5712221 .meta {
+#user-rollover.id-3669054 .meta, #user-rollover.id-5712221 .meta, #user-rollover.id-5712221 .meta)) !important;
     height: 150px;
 }
 
