--- a/TM.css
+++ b/TM.css
@@ -3,6 +3,57 @@
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Supporters.css");
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Developer.css");
 
+.communities .grid .cell {
+    position: relative;
+    float: left;
+    overflow: hidden;
+    margin: 0 15px 15px 0;
+    width: 250px;
+    height: 300px;
+    background: rgba(0, 38, 94, 0.78);
+    cursor: pointer;
+}
+.tab-menu button.selected {
+    background: #00265e;
+    color: #eee;
+    cursor: default;
+}
+.communities .grid .cell .bar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    width: 100%;
+    height: 43px;
+    background: rgb(36, 59, 107);
+}
+element.style {
+    width: 33.0769%;
+}
+rcs.css:61
+#rcs-progress-container .bar {
+    height: 100%;
+    width: 0;
+    background-color: #d9d9d8;
+    transition: background-color 7s;
+    -webkit-transition: width 2s;
+    transition: width 2s;
+}
+#rcs-progress-container {
+    z-index: 25;
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    left: 0;
+    bottom: 0;
+    background-color: #0d1927;
+    overflow: hidden;
+}
+#dashboard {
+    z-index: 80;
+    background: rgba(17, 19, 23, 0.81);
+}
+
 #user-rollover .meta {
     min-height: 150px;
 }
