--- a/TM.css
+++ b/TM.css
@@ -3,15 +3,14 @@
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Supporters.css");
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Developer.css");
 
-.communities .grid .cell {
+.communities .grid .cell .meta {
     position: relative;
-    float: left;
-    overflow: hidden;
-    margin: 0 15px 15px 0;
-    width: 250px;
-    height: 300px;
-    background: rgba(0, 38, 94, 0.78);
-    cursor: pointer;
+    z-index: 2;
+    margin-top: 186px;
+    width: 100%;
+    height: 90px;
+    background: rgba(15, 47, 90, 0.71);
+    transition: all .25s ease-in;
 }
 .tab-menu button.selected {
     background: #00265e;
