--- a/Bot.css
+++ b/Bot.css
@@ -46,7 +46,7 @@ element.style {
 }
 
 #user-rollover.id-20168147 .meta:after, #user-rollover.id-20168147 .meta:after, #user-rollover.id-20168147 .meta:after, #user-rollover.id-20168147 .meta:after, #user-rollover.id-20168147 .meta:after {
-    content: 'TitanMusic Developer';
+    content: 'TitanMusic Bot';
     color: #808691;
     position: absolute;
     top: 118px;
