--- a/Supporters.css
+++ b/Supporters.css
@@ -1,11 +1,11 @@
-/*donators:
+/*Developer:
 TitanMusic | Developer: 3669054
 */
 
 /*fix for glitching*/
 
 #user-rollover .meta {
-    min-height: 150px;
+    min-height: 120px;
 }
 
 #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before {
@@ -23,25 +23,25 @@ TitanMusic | Developer: 3669054
 #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after {
     content: TitanMusic Staff;
     background: url('https://rawgit.com/Satskhi/EDTRCS/master/images/tooltip.png');
-    padding: 50px 50px;
-    color: white;
-    bottom: 50px;
+    padding: 5px 5px;
+    color: red;
+    bottom: 5px;
     position: absolute;
-    left: 50px;
-    width: 50px;
-    height: 50px;
+    left: 5px;
+    width: 5px;
+    height: 5px;
 }
 
 /*normal supporters*/
 
 #user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta {
-    height: 150px ;
+    height: 120px ;
 }
 
 #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before {
     content: url("http://i.imgur.com/3WAxI63.png?1");
-    top: 150px;
-    left: 150px;
+    top: 120px;
+    left: 120px;
     position: absolute;
 }
 
@@ -49,38 +49,45 @@ TitanMusic | Developer: 3669054
     content: 'TitanMusic Staff';
     color: #808691;
     position: absolute;
-    top: 150px;
-    left: 150px;
+    top: 120px;
+    left: 120px;
 }
 
 /*People who also staff another things (eg. RCS)*/
 
 #user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta {
-    height: 150px ;
+    height: 120px ;
 }
 
 #user-rollover.id-3669054 .meta #isSpecial, #user-rollover.id-3669054 .meta #isSpecial, #user-rollover.id-3669054 .meta #isSpecial {
-    top: 150px ;
+    top: 120px ;
 }
 
 #user-rollover.id-3669054 .meta #isSpecialtxt, #user-rollover.id-3669054 .meta #isSpecialtxt, #user-rollover.id-3669054 .meta #isSpecialtxt {
-    top: 150px ;
+    top: 120px ;
 }
 
 #user-rollover.is-none.can-mention.can-friend.can-ignore.can-shop.expand.chat.id-3669054.is-TitanMusic-Staff.role-subscriber.role-none div.meta.subscriber i#isSpecial {
     content: TitanMusic Staff;
-    left: 150px;
+    left: 120px;
     position: absolute;
-    top: 150px;
+    top: 120px;
 }
 
 #user-rollover.is-none.can-mention.can-friend.can-ignore.can-shop.expand.chat.id-3669054.is-TitanMusic-Staff.role-subscriber.role-none div.meta.subscriber span#isSpecialtxt {
     content: TitanMusic Staff;
-    left: 150px;
+    left: 120px;
     position: absolute;
-    top: 150px;
+    top: 120px;
 }
 
 element.style {
-    height: 150px;
+    height: 120px;
+}
+	
+#user-rollover.is-host.can-mention.can-friend.expand.chat.id-3669054.is-developer.is-titanmusicstaff.role-host.role-host.role-subscriber div.meta.subscriber i#isSpecial {
+
+}
+
+#user-rollover.is-host.can-mention.can-friend.expand.chat.id-3669054.is-developer.is-titanmusicstaff.role-host.role-host.role-subscriber div.meta.subscriber span#isSpecialtxt {
 }
