--- a/Staff.css
+++ b/Staff.css
@@ -1,1 +1,54 @@
+/* Trigstur: 5712221 */
 
+#user-rollover.id-3669054 .meta, #user-rollover.id-5712221 .meta, #user-rollover.id-5712221 .meta {
+    height: 150px;
+}
+element.style {
+    height: 150px;
+}
+#user-rollover .meta {
+    min-height: 126px;
+}
+
+#chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before {
+    content: url("http://egorganisation.com/images/Medal%20Silver.png");
+    top: 3px;
+    left: -3px;
+    position: relative;
+}
+
+#chat [data-cid^='3669054-'] .un, #chat [data-cid^='3669054-'] .un, #chat [data-cid^='5712221-'] .un, #chat [data-cid^='3669054-'] .un, #chat [data-cid^='3669054-'] .un {
+    top: -3px ;
+    position: relative;
+}
+
+#chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after {
+    content: TitanMusic Staff;
+    background: url('http://canberra.naturemapr.org/Images/Badges/100-sightings-16.png');
+    padding: 3px 6px;
+    color: white;
+    bottom: 20px;
+    position: absolute;
+    left: 5px;
+    width: 79px;
+    height: 26px;
+}
+
+#user-rollover.id-3669054 .meta, #user-rollover.id-5712221 .meta {
+    height: 150px ;
+}
+
+#user-rollover.id-5712221 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before {
+    content: url("http://canberra.naturemapr.org/Images/Badges/100-sightings-16.png");
+    top: 120px;
+    left: 109px;
+    position: absolute;
+}
+
+#user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after {
+    content: 'TitanMusic Developer';
+    color: #808691;
+    position: absolute;
+    top: 118px;
+    left: 130px;
+}
