--- a/TM.css
+++ b/TM.css
@@ -2,6 +2,7 @@
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Bot.css");
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Supporters.css");
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Developer.css");
+@import url("https://rawgit.com/TitanMusicDev/TMCss/master/Staff.css");
 
 .communities .grid .cell .meta {
     position: relative;
