--- a/Staff.css
+++ b/Staff.css
@@ -46,7 +46,7 @@ element.style {
 }
 
 #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after {
-    content: 'TitanMusic Developer';
+    content: 'TitanMusic Staff';
     color: #808691;
     position: absolute;
     top: 118px;
